--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -145,6 +145,7 @@
     }
    ],
    "source": [
+    "#Headers of table 'medications'\n",
     "list(d['medications'])"
    ]
   },
@@ -185,6 +186,13 @@
     "for key in label:\n",
     "    print(key, label[key])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
